@@ -31,15 +31,16 @@ Steps to install it after cloning (skip the `./autogen.sh` part if you're buildi
 
 You can see everything I'll post about reds [there](http://www.imagination-land.org/tags/creds.html).
 
-Latest release is: [creds 2](http://www.imagination-land.org/posts/2016-02-08-creds-2-released.html).
+Latest release is: [creds 3](http://www.imagination-land.org/posts/2016-02-09-creds-3-released.html).
 
-Direct link to download: <http://www.imagination-land.org/files/creds/creds-2.tar.xz>
+Direct link to download: <http://www.imagination-land.org/files/creds/creds-3.tar.xz>
 
 Troubleshooting
 ---------------
 
 - `creds` fails with the error
 
-        gpg: 853120A2: There is no assurance this key belongs to the named user
+        gpg: XXXXXXXX: There is no assurance this key belongs to the named user
         gpg: [stdin]: encryption failed: unusable public key
-    Your key isn't signed. You can either sign it or set the environment variable `CREDS_GPG_ARGS` to `--trust-model always`
+
+    => Your key isn't signed. You can either sign it or set the environment variable `CREDS_GPG_ARGS` to `--trust-model always`
